# SmartWatch_ESP32_S3

./: README.md
Documents/: roadmap.txt
Firmware/SmartWatch/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Firmware/SmartWatch/assets/example_ui/: project.info  ui.c  ui.h  ui_helpers.c  ui_helpers.h
Firmware/SmartWatch/assets/ui_project/: SmartWatch_UI.sll  SmartWatch_UI.slp  SmartWatch_UI.spj  project.info
Firmware/SmartWatch/components/apps/: CMakeLists.txt  apps.c  diagnostics_app.c  launcher_app.c  settings_app.c  watchface_app.c
Firmware/SmartWatch/components/esp_lcd_touch_ft3168/: CMakeLists.txt  esp_lcd_touch_ft3168.c
Firmware/SmartWatch/components/kernel/: CMakeLists.txt  app_manager.c  event_bus.c  input_manager.c  kernel.c  logger.c  screen_manager.c  service_manager.c  session_manager.c  storage_manager.c
Firmware/SmartWatch/components/kernel/include/: app_manager.h  event_bus.h  input_manager.h  logger.h  screen_manager.h  service_manager.h  session_manager.h  storage_manager.h
Firmware/SmartWatch/components/platform/: CMakeLists.txt  platform.c  platform_audio.c  platform_display.c  platform_imu.c  platform_input.c  platform_power.c  platform_rtc.c  platform_storage.c  platform_touch.c
Firmware/SmartWatch/components/platform/include/: platform.h  platform_audio.h  platform_display.h  platform_imu.h  platform_input.h  platform_power.h  platform_rtc.h  platform_storage.h  platform_touch.h
Firmware/SmartWatch/components/platform/smartwatch_board/: idf_component.yml  smartwatch_board.c  smartwatch_power.cpp
Firmware/SmartWatch/components/platform/smartwatch_board/include/: smartwatch_board.h
Firmware/SmartWatch/components/services/: CMakeLists.txt  audio_service.c  battery_service.c  sensor_service.c  services.c  storage_service.c  time_service.c
Firmware/SmartWatch/components/smartwatch_app/: CMakeLists.txt  smartwatch_app.c
Firmware/SmartWatch/components/smartwatch_board/: CMakeLists.txt  idf_component.yml  smartwatch_audio.c  smartwatch_board.c  smartwatch_motion.c
Firmware/SmartWatch/components/smartwatch_platform/: CMakeLists.txt  smartwatch_platform.c
Firmware/SmartWatch/components/smartwatch_services/: CMakeLists.txt  smartwatch_services.c
Firmware/SmartWatch/components/smartwatch_storage/: CMakeLists.txt  smartwatch_storage.c
Firmware/SmartWatch/components/smartwatch_ui/: CMakeLists.txt  smartwatch_ui.c
Firmware/SmartWatch/components/ui/: CMakeLists.txt  ui_events.c  ui_manager.c  ui_squareline.c  ui_theme.c
Firmware/SmartWatch/components/ui/include/: ui_events.h  ui_manager.h  ui_squareline.h  ui_theme.h
Firmware/SmartWatch/components/ui/squareline/: CMakeLists.txt  README.md  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Firmware/SmartWatch/components/ui/squareline/components/: ui_comp_hook.c
Firmware/SmartWatch/components/ui/squareline/screens/: ui_About.c  ui_About.h  ui_Boot.c  ui_Boot.h  ui_Launcher.c  ui_Launcher.h  ui_Music.c  ui_Music.h  ui_Notification.c  ui_Notification.h  ui_QuickSettings.c  ui_QuickSettings.h  ui_Recorder.c  ui_Recorder.h  ui_Settings.c  ui_Settings.h  ui_WatchFace.c  ui_WatchFace.h  ui_XiaoZhi.c  ui_XiaoZhi.h
Firmware/SmartWatch/docs/: ARCHITECTURE.md  HARDWARE.md  api.md  architecture.md  hardware.md  roadmap.md
Firmware/SmartWatch/main/: CMakeLists.txt  app_main.c  main.c
(+25 files in other folders)
