idf_component_register(
    SRCS
        "ui_manager.c"
        "ui_events.c"
        "ui_theme.c"
        "ui_squareline.c"
        "../../assets/example_ui/ui.c"
        "../../assets/example_ui/ui_helpers.c"
        "../../assets/example_ui/components/ui_comp.c"
        "../../assets/example_ui/components/ui_comp_hook.c"
        "../../assets/example_ui/components/ui_comp_batterygroup.c"
        "../../assets/example_ui/components/ui_comp_buttondown.c"
        "../../assets/example_ui/components/ui_comp_buttontop.c"
        "../../assets/example_ui/components/ui_comp_dailymissiongroup.c"
        "../../assets/example_ui/components/ui_comp_dategroup.c"
        "../../assets/example_ui/components/ui_comp_stepgroup.c"
        "../../assets/example_ui/components/ui_comp_titlegroup.c"
        "../../assets/example_ui/components/ui_comp_weathergroup1.c"
        "../../assets/example_ui/screens/ui_watch_digital.c"
        "../../assets/example_ui/screens/ui_weather_1.c"
        "../../assets/example_ui/fonts/ui_font_H1.c"
        "../../assets/example_ui/fonts/ui_font_Number_big.c"
        "../../assets/example_ui/fonts/ui_font_Number_extra.c"
        "../../assets/example_ui/fonts/ui_font_Subtitle.c"
        "../../assets/example_ui/fonts/ui_font_Title.c"
        "../../assets/example_ui/images/ui_img_bg1_png.c"
        "../../assets/example_ui/images/ui_img_bg3_png.c"
        "../../assets/example_ui/images/ui_img_btn_bg_1_png.c"
        "../../assets/example_ui/images/ui_img_btn_bg_3_png.c"
        "../../assets/example_ui/images/ui_img_call1_png.c"
        "../../assets/example_ui/images/ui_img_clouds_png.c"
        "../../assets/example_ui/images/ui_img_daily_mission_png.c"
        "../../assets/example_ui/images/ui_img_flash_png.c"
        "../../assets/example_ui/images/ui_img_house_png.c"
        "../../assets/example_ui/images/ui_img_rain_png.c"
        "../../assets/example_ui/images/ui_img_sec_dot_png.c"
        "../../assets/example_ui/images/ui_img_step_png.c"
        "../../assets/example_ui/images/ui_img_sun_png.c"
        "../../assets/example_ui/images/ui_img_weather_png.c"
        "../../assets/example_ui/images/ui_img_weather_sun_cloud_png.c"
        "../../assets/example_ui/images/ui_img_wind_png.c"
    INCLUDE_DIRS
        "include"
        "../../assets/example_ui"
        "../../assets/example_ui/screens"
        "../../assets/example_ui/components"
    REQUIRES platform kernel
)
